tests/fixtures/invalid/set_le_int.py
# Cannot compare with <= Set[int] and Int
x: bool = {1, 2, 3} <= 1
